--- a/env.production.example
+++ b/env.production.example
@@ -1,10 +1,12 @@
-# The application's environment and port.
-APP_ENV=production
-APP_PORT=
+# The API documentation's port.
+API_DOCUMENTATION_PORT=1338
+
+# The Maildev's port.
+MAILDEV_PORT=1339
 
 # The NoSQLClient's port.
-NOSQLCLIENT_PORT=
+NOSQLCLIENT_PORT=1340
 
 # The MongoDB's credentials.
-MONGO_INITDB_ROOT_USERNAME=
-MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_ROOT_USERNAME=SponteousDevManager
+MONGO_INITDB_ROOT_PASSWORD=GZiV12OmdDmmxkX2
