--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/google-maps-react": "^2.0.4",
     "ajv": "^6.10.0",
     "animate.css": "^3.7.0",
     "antd": "3.8.1",
@@ -26,6 +27,7 @@
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "formik": "^1.3.2",
     "fs-extra": "3.0.1",
+    "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "2.29.0",
     "intl": "^1.2.5",
     "moment": "^2.22.2",
