Reverting deployment problems made by 2a1d20c

--- a/env.production.example
+++ b/env.production.example
@@ -1,12 +1,10 @@
-# The API documentation's port.
-API_DOCUMENTATION_PORT=1338
-
-# The Maildev's port.
-MAILDEV_PORT=1339
+# The application's environment and port.
+APP_ENV=production
+APP_PORT=
 
 # The NoSQLClient's port.
-NOSQLCLIENT_PORT=1340
+NOSQLCLIENT_PORT=
 
 # The MongoDB's credentials.
-MONGO_INITDB_ROOT_USERNAME=SponteousDevManager
-MONGO_INITDB_ROOT_PASSWORD=GZiV12OmdDmmxkX2
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
