--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./app/backend/docs:/usr/src/docs
     ports:
-      - 1338:4567
+      - ${API_DOCUMENTATION_PORT}:4567
     command:  bash -c "cd ./docs && bundle install && bundle exec middleman server"
   # Backend Container.
   backend:
@@ -26,7 +26,7 @@ services:
     expose:
       - 3002
     ports:
-      - 1339:3003
+      - ${MAILDEV_PORT}:3003
     command:  bin/maildev --web 3003 --smtp 3002 -v
   # Nginx Container.
   nginx:
@@ -35,11 +35,11 @@ services:
     - backend
     - frontend
     ports:
-    - 1337:80
+    - ${APP_PORT}:80
   # Nosqlclient client container.
   nosqlclient-client:
     image: mongoclient/mongoclient:latest
     depends_on:
      - mongo
     ports:
-      - 1340:3000
+      - ${NOSQLCLIENT_PORT}:3000
