--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -23,6 +23,7 @@
     "lodash": "~4.17.11",
     "mailgun-js": "~0.17.0",
     "mongoose": "~5.3.14",
+    "node-geocoder": "^3.25.0",
     "redis": "~2.8.0",
     "rn-tri-toggle-switch": "^1.0.4",
     "socket.io": "~2.1.1",
