--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -44,6 +44,7 @@
     "react": "^16.8.6",
     "react-calendar": "^2.17.5",
     "react-dev-utils": "^5.0.3",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.8.6",
     "react-dropdown-select": "^3.0.0",
     "react-loadable": "^5.3.1",
